--- a/tutorial_with_solution.ipynb
+++ b/tutorial_with_solution.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,13 @@
        "(x + y)**2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sympy import *\n",
+    "from sympy import * \n",
     "\n",
     "# Declaring symbolic variables:\n",
     "\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "x**3*y/3 + x**2*y**2/2 + x*y**3/3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Griffiths Electrodynamics: Example 2.4. A long cylinder (Fig. 2.21 below) carries a charge density that is propor-\n",
-    "tional to the distance from the axis: ρ = ks, for some constant k. Find the electric\n",
+    "Griffiths Electrodynamics: Example 2.4. A long cylinder (Fig. 2.21 below) carries a charge density that is proportional to the distance from the axis: ρ = ks, for some constant k. Find the electric\n",
     "field inside this cylinder. \n",
     "\n",
     "Hint: (Use Gauss' law: $ \\oint_S \\textbf{E} \\cdot d \\textbf{a} = \\frac{1}{\\epsilon_0} Q_{enc}$ in cylindrical coordinate system).\n",
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
        "2*pi*k*l*s**3/3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +130,6 @@
     "# Exercise\n",
     "\n",
     "from PIL import Image\n",
-    "\n",
     "Image.open(\"Eg 2.4 .jpg\")\n",
     "\n",
     "k = Symbol(\"k\")\n",
@@ -140,9 +138,15 @@
     "phi = Symbol(\"phi\")\n",
     "z = Symbol(\"z\")\n",
     "\n",
-    "\n",
     "Qenc = integrate(k * s**2, (phi, 0, 2 * pi), (s, 0, s), (z, 0, l))\n",
     "Qenc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finite Element Method Example with Sympy and an external package."
    ]
   },
   {
