--- a/tutorial_with_practice.ipynb
+++ b/tutorial_with_practice.ipynb
@@ -357,6 +357,15 @@
     "# Pretty print the result\n",
     "bayes_trm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#share one"
+   ]
   }
  ],
  "metadata": {
