--- a/Exercise.ipynb
+++ b/Exercise.ipynb
@@ -20,7 +20,7 @@
     "from sympy import *\n",
     "from IPython.display import Math\n",
     "\n",
-    "# Just to make it look pretty imprted\n",
+    "# Just to make it look pretty \n",
     "latexReplaceRules = {\n",
     "    # r'{\\left(t \\right)}':r' ',\n",
     "    r'\\frac{d}{d t}':r'\\dot',\n",
